--- a/index.html
+++ b/index.html
@@ -39,5 +39,12 @@
         </div>
     </main>
 
+    <div class="hidden">
+        <audo src="backtowork.mp3" data-sound="pomodoro"></audo>
+        <audo src="break.mp3" data-sound="shortBreak"></audo>
+        <audo src="break.mp3" data-sound="longBreak"></audo>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
